cabal-version:       2.4
name:                adl-compiler
version:             0.13
synopsis:            A compiler for the Algebraic Data Language (ADL)
license:             BSD-3-Clause
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013-2021 Tim Docker
category:            Network
build-type:          Simple

data-files:           lib/adl/adlc/config/cpp.adl
                    , lib/adl/adlc/config/haskell.adl
                    , lib/adl/adlc/config/java.adl
                    , lib/adl/adlc/config/rust.adl
                    , lib/adl/adlc/config/typescript.adl
                    , lib/adl/sys/adlast.adl
                    , lib/adl/sys/adlast.adl-java
                    , lib/adl/sys/annotations.adl
                    , lib/adl/sys/dynamic.adl
                    , lib/adl/sys/dynamic.adl-java
                    , lib/adl/sys/types.adl
                    , lib/adl/sys/types.adl-cpp
                    , lib/adl/sys/types.adl-hs
                    , lib/adl/sys/types.adl-java
                    , lib/adl/sys/types.adl-rs
                    , lib/haskell/runtime/ADL/Core.hs
                    , lib/haskell/runtime/ADL/Core/Nullable.hs
                    , lib/haskell/runtime/ADL/Core/StringMap.hs
                    , lib/haskell/runtime/ADL/Core/TypeToken.hs
                    , lib/haskell/runtime/ADL/Core/Value.hs
                    , lib/haskell/runtime/ADL/Sys/Adlast.hs
                    , lib/haskell/runtime/ADL/Sys/Types.hs
                    , lib/java/runtime/org/adl/runtime/AdlVoid.java
                    , lib/java/runtime/org/adl/runtime/Builders.java
                    , lib/java/runtime/org/adl/runtime/ByteArray.java
                    , lib/java/runtime/org/adl/runtime/DynamicHelpers.java
                    , lib/java/runtime/org/adl/runtime/Factories.java
                    , lib/java/runtime/org/adl/runtime/Factory.java
                    , lib/java/runtime/org/adl/runtime/HashMapHelpers.java
                    , lib/java/runtime/org/adl/runtime/HashSetHelpers.java
                    , lib/java/runtime/org/adl/runtime/JsonBinding.java
                    , lib/java/runtime/org/adl/runtime/JsonBindings.java
                    , lib/java/runtime/org/adl/runtime/JsonHelpers.java
                    , lib/java/runtime/org/adl/runtime/JsonParseException.java
                    , lib/java/runtime/org/adl/runtime/Lazy.java
                    , lib/java/runtime/org/adl/runtime/MaybeHelpers.java
                    , lib/java/runtime/org/adl/runtime/TypeToken.java
                    , lib/typescript/runtime/adl.ts
                    , lib/typescript/runtime/dynamic.ts
                    , lib/typescript/runtime/json.ts
                    , lib/typescript/runtime/sys/adlast.ts
                    , lib/typescript/runtime/sys/dynamic.ts
                    , lib/typescript/runtime/sys/types.ts
                    , lib/typescript/runtime/utils.ts
                    , lib/rust/runtime/custom/mod.rs
                    , lib/rust/runtime/custom/sys/mod.rs
                    , lib/rust/runtime/custom/sys/types/map.rs
                    , lib/rust/runtime/custom/sys/types/maybe.rs
                    , lib/rust/runtime/custom/sys/types/mod.rs
                    , lib/rust/runtime/custom/sys/types/pair.rs
                    , lib/rust/runtime/custom/sys/types/result.rs
                    , lib/rust/runtime/custom/sys/types/set.rs
                    , lib/rust/runtime/mod.rs

executable adlc-bootstrap
  main-is:           Main.hs
  hs-source-dirs:    adlc-bootstrap
  ghc-options:       -fwarn-incomplete-patterns
  other-modules:      BootstrapCustomTypes
  build-depends:      base
                    , containers
                    , text
                    , mtl
                    , filepath
                    , executable-path
                    , adl-runtime
                    , adlc-lib0

executable adlc
  main-is:            Main.hs
  hs-source-dirs:     adlc
  ghc-options:       -fwarn-incomplete-patterns
  other-modules:      Paths_adl_compiler
  build-depends:      base
                    , text
                    , mtl
                    , filepath
                    , executable-path
                    , adl-runtime
                    , adl-compiler

test-suite adlc-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     tests
  ghc-options:       -fwarn-incomplete-patterns
  build-depends:      base
                    , bytestring
                    , text
                    , filepath
                    , directory
                    , hspec
                    , stm
                    , temporary
                    , adl-runtime
                    , adl-compiler

-- Library code without generated ADL (so available to the bootstrap compiler)
library adlc-lib0
  hs-source-dirs:     adlc-lib0
  ghc-options:       -fwarn-incomplete-patterns
  exposed-modules:   ADL.Compiler.AST,
                     ADL.Compiler.Primitive,
                     ADL.Compiler.ParserP,
                     ADL.Compiler.Utils,
                     ADL.Compiler.EIO,
                     ADL.Compiler.Processing,
                     ADL.Compiler.Flags,
                     ADL.Compiler.ExternalAST,
                     ADL.Compiler.Backends.Verify,
                     ADL.Compiler.Backends.Haskell,
                     ADL.Utils.DelayIO,
                     ADL.Utils.FileDiff,
                     ADL.Utils.Format,
                     ADL.Utils.IndentedCode,
                     ADL.Utils.Resource
  build-depends:      base
                    , bytestring
                    , cases
                    , text
                    , containers
                    , parsec
                    , mtl
                    , transformers
                    , filepath
                    , directory
                    , unordered-containers
                    , vector
                    , base64-bytestring
                    , attoparsec
                    , stm
                    , aeson
                    , scientific
                    , aeson-pretty
                    , adl-runtime


-- Library code including generated ADL (so not available to the bootstrap compiler)
-- publically referenceable by other projects as `adl-compiler`
library
  hs-source-dirs:     adlc-lib0
                    , adlc-lib1
  ghc-options:       -fwarn-incomplete-patterns
  exposed-modules:    ADL.Compiler.AST
                    , ADL.Compiler.Primitive
                    , ADL.Compiler.ParserP
                    , ADL.Compiler.Utils
                    , ADL.Compiler.EIO
                    , ADL.Compiler.Processing
                    , ADL.Compiler.Flags
                    , ADL.Compiler.ExternalAST
                    , ADL.Compiler.Backends.Verify
                    , ADL.Compiler.Backends.Haskell
                    , ADL.Utils.DelayIO
                    , ADL.Utils.FileDiff
                    , ADL.Utils.Format
                    , ADL.Utils.IndentedCode
                    , ADL.Utils.Resource
                    , ADL.Compiler.Backends.AST
                    , ADL.Compiler.Backends.Cpp
                    , ADL.Compiler.Backends.Java
                    , ADL.Compiler.Backends.Java.Internal
                    , ADL.Compiler.Backends.Java.Parcelable
                    , ADL.Compiler.Backends.Javascript
                    , ADL.Compiler.Backends.Typescript
                    , ADL.Compiler.Backends.Typescript.Internal
                    , ADL.Compiler.Backends.Rust
                    , ADL.Compiler.Backends.Rust.Internal
                    , ADL.Compiler.DataFiles
                    , ADL.Adlc.Config.Cpp
                    , ADL.Adlc.Config.Haskell
                    , ADL.Adlc.Config.Java
                    , ADL.Adlc.Config.Rust
                    , HaskellCustomTypes
                    , Paths_adl_compiler
  build-depends:      base
                    , bytestring
                    , cases
                    , text
                    , containers
                    , parsec
                    , mtl
                    , stm
                    , transformers
                    , filepath
                    , directory
                    , unordered-containers
                    , vector
                    , base64-bytestring
                    , attoparsec
                    , aeson
                    , scientific
                    , aeson-pretty
                    , executable-path
                    , adl-runtime

