name:                adl-examples
version:             0.1.0.0
synopsis:            Examples for the Algebraic Data Language (ADL)
-- description:         
license:             BSD3
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable runexample
   main-is:             RunExample.hs
   ghc-options:         -threaded
   build-depends:       base, text, containers, bytestring,
                        parsec, mtl, transformers,
                        old-locale,
                        aeson, unordered-containers, stm, hslogger, time, unix,
                        adl-utils, adl-runtime, adl-comms-http
   other-modules:       Echo
                      , KVClient1
                      , KVClient2
                      , KVServer1
                      , KVServer2
                      , PSClient
                      , PSServer
                      , Serialisation
                      , Utils
                      , ADL.Examples.Kvstore1
                      , ADL.Examples.Kvstore2
                      , ADL.Examples.Datetime
                      , ADL.Examples.Echo
                      , ADL.Examples.Pubsub
                      , ADL.Examples.Pubsub1
                      , ADL.Examples.Serialisation