name:                generated-haskell
version:             0.1.0.0
synopsis:            Verify that the haskell runtime and all of the adlc test output builds ok
homepage:            https://github.com/githubuser/tests#readme
license:             BSD3
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           2017, Tim Docker
category:            Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      ../runtime/src
                     , ../compiler/tests/test1/hs-output
                     , ../compiler/tests/test2/hs-output
                     , ../compiler/tests/test3/hs-output
                     , ../compiler/tests/test4/hs-output
                     , ../compiler/tests/test5/hs-output
--                     , ../compiler/tests/test6/hs-output  -- redundant as code already in the runtime
                     , ../compiler/tests/test7/hs-output
                     , ../compiler/tests/test18/hs-output
                     , ../compiler/tests/test20/hs-output
                     , ../compiler/tests/demo1/hs-output
  exposed-modules:     ADL.Core
                     , ADL.Core.Value
                     , ADL.Test1
                     , ADL.Test2
                     , ADL.Test3
                     , ADL.Test4
                     , ADL.Test5
                     , ADL.Sys.Adlast
                     , ADL.Sys.Types
                     , ADL.Test7
                     , ADL.Test18
                     , ADL.Test20
                     , ADL.Picture
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0.2.1 && < 1.1
                     , bytestring >= 0.10.8.1 && < 0.11
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , containers >= 0.5.7.1 && < 0.6
                     , scientific >= 0.3.4.10 && < 0.4
                     , text >= 1.2 && < 1.3
                     , time >= 1.6 && < 1.7
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , vector >= 0.11.0.0 && < 0.12
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tests
