cabal-version:       3.14
name:                generated-tests
version:             0.1.0.0
synopsis:            Verify that the haskell runtime and all of the adlc test output builds ok
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           2017, Tim Docker
category:            Test
build-type:          Simple

library
  hs-source-dirs:      ../runtime/src
                     , ../compiler/tests/test1/hs-output
                     , ../compiler/tests/test2/hs-output
                     , ../compiler/tests/test3/hs-output
                     , ../compiler/tests/test4/input
                     , ../compiler/tests/test4/hs-output
                     , ../compiler/tests/test5/hs-output
--                     , ../compiler/tests/test6/hs-output  -- redundant as code already in the runtime
                     , ../compiler/tests/test7/hs-output
                     , ../compiler/tests/test18/hs-output
                     , ../compiler/tests/test20/hs-output
                     , ../compiler/tests/demo1/hs-output
                     , ../compiler/tests/test24/hs-output
  exposed-modules:     ADL.Core
                     , ADL.Core.Value
                     , ADL.Core.Map
                     , ADL.Core.StringMap
                     , ADL.Core.TypeToken
                     , ADL.Core.Nullable
                     , ADL.Test1
                     , ADL.Test2
                     , ADL.Test3
                     , ADL.Test4
                     , ADL.Test5
                     , ADL.Sys.Adlast
                     , ADL.Sys.Types
                     , ADL.Test7
                     , ADL.Test18
                     , ADL.Test20
                     , ADL.Test24
                     , ADL.Picture
                     , Date
  build-depends:       base
                     , aeson
                     , bytestring
                     , base64-bytestring
                     , containers
                     , scientific
                     , text
                     , time
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tests
