name:                adl-runtime
version:             0.1.0.0
synopsis:            Runtime library for the Algebraic Data Language (ADL)
description:         
license:             BSD3
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Custom
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Core, ADL.Core.CustomTypes, ADL.Core.Value, ADL.Core.Sink, ADL.Core.Primitives,
                       ADL.Core.Comms, ADL.Core.Comms.Internals, ADL.Core.Comms.Serialisation,
                       ADL.Core.Comms.Types,
                       ADL.Core.Comms.Null,
                       ADL.Core.Comms.Rpc,
                       ADL.Sys.Types, ADL.Sys.Rpc, ADL.Sys.Sinkimpl, ADL.Sys.Adlast
  build-depends:       base, text, containers, bytestring,
                       parsec, mtl, transformers,
                       time, network, unordered-containers, vector,
                       stm, uuid, hslogger,
                       base64-bytestring,
                       attoparsec, aeson, scientific,
                       network-transport,
                       adl-utils
