name:                adl-runtime
version:             0.1.0.0
synopsis:            Runtime library for the Algebraic Data Language (ADL)
description:         
license:             BSD3
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     ADL.Core, ADL.Core.Value
  build-depends:       base, text, containers, bytestring,
                       parsec, mtl, transformers,
                       time, network, unordered-containers, vector,
                       stm, uuid, hslogger,
                       base64-bytestring,
                       attoparsec, aeson, scientific,
                       network-transport,
                       adl-utils
