cabal-version:       3.14
name:                adl-runtime
version:             0.1.0.0
synopsis:            Runtime library for the Algebraic Data Language (ADL)
description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple

library
  hs-source-dirs:      src
  ghc-options:         -fwarn-incomplete-patterns
  exposed-modules:     ADL.Core,
                       ADL.Core.Value,
                       ADL.Core.Map,
                       ADL.Core.StringMap,
                       ADL.Core.Nullable,
                       ADL.Sys.Types,
                       ADL.Sys.Adlast,
                       ADL.Core.TypeToken
  build-depends:       base, text, containers, bytestring,
                       parsec, mtl, transformers,
                       time, network, unordered-containers, vector,
                       stm, uuid, hslogger,
                       base64-bytestring,
                       attoparsec, aeson, scientific,
                       network-transport
