name:                adl-utils
version:             0.1.0.0
synopsis:            Assorted helper functions for the adl packages
-- description:         
license:             GPL-2
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Utils.Format, ADL.Utils.DelayIO, ADL.Utils.Resource, ADL.Utils.FileDiff
  build-depends:       base, text, containers, bytestring, stm,
                       filepath, directory

