name:                adl-utils
version:             0.1.0.0
synopsis:            Assorted helper functions for the adl packages
-- description:         
license:             GPL-2
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Utils.Format, ADL.Utils.DelayIO, ADL.Utils.Resource, ADL.Utils.FileDiff
  build-depends:       base == 4.6.*, text == 0.11.*, containers == 0.5.*, bytestring == 0.10.*, stm == 2.4.*,
                       filepath == 1.3.*, directory == 1.2.*

