[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "radlc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.61"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.130", features=["derive"] }
serde_json = "1.0.68"
nom = "7.0.0"
nom_locate = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
genco = "0.17.3"
convert_case = "0.6.0"
backtrace-on-stack-overflow = "0.3.0"
regex = "1.7.3"
rust-embed = "6.6.1"
serde_ignored = "0.1.7"
